data/derived/fa15/progs/unify/prog2696.ml.out
Characters 304-308:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type (int * 'a) list
       but an expression was expected of type int list list
       Type int * 'a is not compatible with type int list 
